--- a/index.html
+++ b/index.html
@@ -1,10 +1,145 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Mi Primera Página</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Edwin Mena | Ingeniero de Sistemas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="estilo1.css">
 </head>
 <body>
-    <h1>¡HOLA MUNDO! 🚀</h1>
-    <p>Mi primera página web creada por JUANCHO</p>
+    <div class="cv-wrapper">
+        <div class="container-fluid cv-container">
+            <div class="row cv-grid">
+                <!-- COLUMNA IZQUIERDA -->
+                <div class="col-lg-4 col-md-5 sidebar-col">
+                    <div class="sidebar-card">
+                        <!-- PERFIL -->
+                        <div class="profile-section text-center mb-5">
+                            <img src="https://lh3.googleusercontent.com/a/ACg8ocLS7QCIMQTrd2qZIlsucOJPggcVIsPgbNILkacuanYwAm9wejv9=s324-c-no"
+                                 alt="Edwin Mena" class="profile-photo">
+                            <h1 class="profile-name">EDWIN ÁNGEL MENA</h1>
+                            <h5 class="profile-role">Ingeniero de Sistemas</h5>
+                        </div>
+
+                        <!-- CONTACTO -->
+                        <div class="contact-section mb-4">
+                            <h6 class="section-header">
+                                <i class="fas fa-address-book me-2"></i>Contacto
+                            </h6>
+                            <div class="contact-item">
+                                <i class="fas fa-envelope text-primary me-3"></i>
+                                <span>edito.pc@gmail.com</span>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-phone text-primary me-3"></i>
+                                <span>300 791 4409</span>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-map-marker-alt text-primary me-3"></i>
+                                <span>Calle 66A No.31B 46<br><small>Barrio Fátima</small></span>
+                            </div>
+                        </div>
+
+                        <!-- HABILIDADES -->
+                        <div class="skills-section">
+                            <h6 class="section-header">
+                                <i class="fas fa-tools me-2"></i>Habilidades
+                            </h6>
+                            <div class="skills-grid">
+                                <span class="skill-badge">HTML/CSS/PHP</span>
+                                <span class="skill-badge">MySQL</span>
+                                <span class="skill-badge">WordPress</span>
+                                <span class="skill-badge">Joomla</span>
+                                <span class="skill-badge">Adobe Suite</span>
+                                <span class="skill-badge">Blender 3D</span>
+                                <span class="skill-badge">IA Generativa</span>
+                                <span class="skill-badge">Realidad Aumentada</span>
+                                <span class="skill-badge">Mecanografía 290ppm</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- COLUMNA DERECHA -->
+                <div class="col-lg-8 col-md-7 main-col">
+                    <div class="main-card">
+                        <!-- PERFIL -->
+                        <div class="profile-main mb-5 pb-4">
+                            <h2 class="main-title">
+                                <i class="fas fa-user-tie me-2"></i>Sobre Mí
+                            </h2>
+                            <p class="lead-highlight" id="experienceCounter">
+                                Especialista en TIC para educación...
+                            </p>
+                            <p class="profile-desc">Instructor SENA, conferencista internacional y experto en desarrollo web, diseño 3D y herramientas de IA generativa.</p>
+                        </div>
+
+                        <!-- EXPERIENCIA -->
+                        <div class="experience-section mb-5">
+                            <h2 class="main-title">
+                                <i class="fas fa-briefcase me-2"></i>Experiencia Profesional
+                            </h2>
+                            <div class="timeline-container">
+                                <div class="timeline-item">
+                                    <div class="timeline-icon"></div>
+                                    <div class="timeline-year">2024</div>
+                                    <h5 class="timeline-title">Instructor SENA - Iniciación a IA</h5>
+                                    <h6 class="timeline-company">Institución Bartolomé Mitre, Chinchiná</h6>
+                                    <p class="timeline-highlight">Inteligencia Artificial aplicada a educación</p>
+                                </div>
+                                <div class="timeline-item">
+                                    <div class="timeline-icon"></div>
+                                    <div class="timeline-year">2019</div>
+                                    <h5 class="timeline-title">Conferencista CIID & SIIEC</h5>
+                                    <p class="timeline-highlight">Ponente Seminario Internacional Innovación Educativa</p>
+                                </div>
+                                <div class="timeline-item">
+                                    <div class="timeline-icon"></div>
+                                    <div class="timeline-year">2019</div>
+                                    <h5 class="timeline-title">Asesor Premio Juventudes</h5>
+                                    <p class="timeline-highlight">Ganador categoría INICIATIVA EMPRENDEDORA TECNOLOGÍA</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- FORMACIÓN -->
+                        <div class="education-section">
+                            <h2 class="main-title">
+                                <i class="fas fa-graduation-cap me-2"></i>Formación Académica
+                            </h2>
+                            <div class="row g-3">
+                                <div class="col-md-4">
+                                    <div class="edu-card">
+                                        <div class="edu-year">2019</div>
+                                        <h6>Especialista TIC</h6>
+                                        <small>UDES, Bucaramanga</small>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="edu-card">
+                                        <div class="edu-year">2014</div>
+                                        <h6>Ingeniero de Sistemas</h6>
+                                        <small>Fundación María Cano, Medellín</small>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="edu-card">
+                                        <div class="edu-year">2006</div>
+                                        <h6>Técnico Sistemas</h6>
+                                        <small>Politécnico Central, Montería</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
