--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="profile-section text-center mb-5">
                             <img src="https://lh3.googleusercontent.com/a/ACg8ocLS7QCIMQTrd2qZIlsucOJPggcVIsPgbNILkacuanYwAm9wejv9=s324-c-no"
                                  alt="Edwin Mena" class="profile-photo">
-                            <h1 class="profile-name">EDWIN ÁNGEL MENA</h1>
+                            <h1 class="profile-name">EDWIN ÁNGEL MENA xxx</h1>
                             <h5 class="profile-role">Ingeniero de Sistemas</h5>
                         </div>
 
@@ -84,7 +84,7 @@
                             <div class="timeline-container">
                                 <div class="timeline-item">
                                     <div class="timeline-icon"></div>
-                                    <div class="timeline-year">2024</div>
+                                    <div class="timeline-year">2024 x</div>
                                     <h5 class="timeline-title">Instructor SENA - Iniciación a IA</h5>
                                     <h6 class="timeline-company">Institución Bartolomé Mitre, Chinchiná</h6>
                                     <p class="timeline-highlight">Inteligencia Artificial aplicada a educación</p>
@@ -138,7 +138,20 @@
             </div>
         </div>
     </div>
+<!-- banner de empresas -->
+<div class="gallery">
+  <img src="img1.jpg" alt="Proyecto 1">
+  <img src="img2.jpg" alt="Proyecto 2">
+  <img src="img3.jpg" alt="Proyecto 3">
+</div>
 
+<!-- Modal para mostrar imagen ampliada -->
+<div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img class="lightbox-content" id="lightbox-img">
+</div>
+
+<!--final banner de empresas-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
