Boton de youtube

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
                         <div class="profile-section text-center mb-5">
                             <img src="https://lh3.googleusercontent.com/a/ACg8ocLS7QCIMQTrd2qZIlsucOJPggcVIsPgbNILkacuanYwAm9wejv9=s324-c-no"
                                  alt="Edwin Mena" class="profile-photo">
-                            <h1 class="profile-name">EDWIN ÁNGEL MENA xxx</h1>
+                            <h1 class="profile-name">EDWIN ANGEL MENA MARTINEZ</h1>
                             <h5 class="profile-role">Ingeniero de Sistemas</h5>
+                            <h5 class="profile-role">Especialista en Aplicación de TIC para la enseñanza</h5>
+                        </div>
+                         <!-- BOTÓN DE YOUTUBE AÑADIDO AQUÍ -->
+                            <a href="https://www.youtube.com/@sombreropro" target="_blank" class="btn btn-danger mt-3 youtube-btn">
+                                <i class="fab fa-youtube me-2"></i>Mi Canal YouTube
+                            </a>
                         </div>
 
                         <!-- CONTACTO -->
