--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
                 <!-- COLUMNA IZQUIERDA -->
                 <div class="col-lg-4 col-md-5 sidebar-col">
                     <div class="sidebar-card">
-                        <!-- PERFIL -->
+                        <!-- PERFIL CORREGIDO -->
                         <div class="profile-section text-center mb-5">
-                            <img src="https://via.placeholder.com/140x140/1e3a8a/ffffff?text=EDWIN" 
+                            <img src="https://lh3.googleusercontent.com/a/ACg8ocLS7QCIMQTrd2qZIlsucOJPggcVIsPgbNILkacuanYwAm9wejv9=s324-c-no" 
                                  alt="Edwin Mena" class="profile-photo">
-                            <h1 class="profile-name">EDWIN ÁNGEL MENA</h1>
+                            <h1 class="profile-name">EDWIN ANGEL MENA MARTINEZ</h1>
+                            <!-- ✅ PRIMER TÍTULO -->
                             <h5 class="profile-role">Ingeniero de Sistemas</h5>
+                            <!-- ✅ SEGUNDO TÍTULO CORREGIDO -->
+                            <h5 class="profile-role specialist-role">Especialista en aplicación de TIC para la enseñanza</h5>
+                            <!-- ✅ BOTÓN YOUTUBE BOOTSTRAP -->
+                            <a href="https://www.youtube.com/@sombreropro" target="_blank" 
+                               class="btn btn-danger btn-youtube mt-3">
+                                <i class="fab fa-youtube me-2"></i>
+                                Canal YouTube
+                            </a>
                         </div>
 
                         <!-- CONTACTO -->
@@ -65,7 +74,7 @@
                 <!-- COLUMNA DERECHA -->
                 <div class="col-lg-8 col-md-7 main-col">
                     <div class="main-card">
-                        <!-- PERFIL -->
+                        <!-- SOBRE MÍ -->
                         <div class="profile-main mb-5 pb-4">
                             <h2 class="main-title">
                                 <i class="fas fa-user-tie me-2"></i>Sobre Mí
@@ -73,7 +82,7 @@
                             <p class="lead-highlight" id="experienceCounter">
                                 Especialista en TIC para educación...
                             </p>
-                            <p class="profile-desc">Instructor SENA, conferencista internacional y experto en desarrollo web, diseño 3D y herramientas de IA generativa.</p>
+                            <p class="profile-desc">Instructor SENA, conferencista internacional y experto en desarrollo web, diseño 3D y herramientas de IA generativa. Apasionado por la innovación educativa.</p>
                         </div>
 
                         <!-- EXPERIENCIA -->
